documentation improvements
