# internal/app/modules/albums/infra/controller/controller.go
@@ -36,7 +36,7 @@ func NewAlbumHandler(c *chi.Mux, as domain.AlbumUseCase) {
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  []domain.Album
-// @Failure      422  {object}  rest.APIMessage
+// @Failure      422   {object}  rest.APIMessage
 // @Router       /album [get]
 func (a *AlbumHandler) FindAll(w http.ResponseWriter, r *http.Request) {
 	albums, err := a.albumUseCase.FindAll(r.Context())
@@ -54,9 +54,10 @@ func (a *AlbumHandler) FindAll(w http.ResponseWriter, r *http.Request) {
 // @Tags         album
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  domain.Album
-// @Failure      422  {object}  rest.APIMessage
-// @Router       /album/:uuid [get]
+// @Param        uuid  path      string  true  "album uuid"
+// @Success      200   {object}  domain.Album
+// @Failure      422      {object}  rest.APIMessage
+// @Router       /album/{uuid} [get]
 func (a *AlbumHandler) FindByID(w http.ResponseWriter, r *http.Request) {
 	uuid, err := uuid.Parse(chi.URLParam(r, "uuid"))
 	if err != nil {
@@ -79,8 +80,9 @@ func (a *AlbumHandler) FindByID(w http.ResponseWriter, r *http.Request) {
 // @Tags         album
 // @Accept       json
 // @Produce      json
-// @Success      201  {object}  rest.APIMessage
-// @Failure      422  {object}  rest.APIMessage
+// @Param        payload  body      domain.Album  true  "add a new album"
+// @Success      201      {object}  rest.APIMessage
+// @Failure      422      {object}  rest.APIMessage
 // @Router       /album [post]
 func (a *AlbumHandler) Add(w http.ResponseWriter, r *http.Request) {
 	var album domain.Album
@@ -115,9 +117,11 @@ func (a *AlbumHandler) Add(w http.ResponseWriter, r *http.Request) {
 // @Tags         album
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  rest.APIMessage
-// @Failure      422  {object}  rest.APIMessage
-// @Router       /album/:uuid [put]
+// @Param        uuid     path      string        true  "album uuid"
+// @Param        payload  body      domain.Album  true  "update an album by uuid"
+// @Success      200      {object}  rest.APIMessage
+// @Failure      422   {object}  rest.APIMessage
+// @Router       /album/{uuid} [put]
 func (a *AlbumHandler) Update(w http.ResponseWriter, r *http.Request) {
 	uuid, err := uuid.Parse(chi.URLParam(r, "uuid"))
 	if err != nil {
@@ -155,9 +159,10 @@ func (a *AlbumHandler) Update(w http.ResponseWriter, r *http.Request) {
 // @Tags         album
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  rest.APIMessage
+// @Param        uuid  path      string  true  "album uuid"
+// @Success      200   {object}  rest.APIMessage
 // @Failure      422  {object}  rest.APIMessage
-// @Router       /album/:uuid [delete]
+// @Router       /album/{uuid} [delete]
 func (a *AlbumHandler) Delete(w http.ResponseWriter, r *http.Request) {
 	uuid, err := uuid.Parse(chi.URLParam(r, "uuid"))
 	if err != nil {
